[package]
name = "server-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
vsock-sample = { path = "./rs" }
vsock-proxy = { path = "./vsock_proxy"}
tempfile = "3.1.0"
clap = "2.33"
key-server-fake = { git = "https://github.com/prz23/key-server-fake" }