[package]
name = "server-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
vsock-sample = { path = "./rs" }
vsock-proxy = { path = "./vsock_proxy"}
tempfile = "3.1.0"
clap = "2.33"
key-server-fake = { git = "https://github.com/prz23/key-server-fake" }
http_req = { version = "0.7.2", default-features = false, features = ["rust-tls"] }
rustls = { version = "0.19", features = ["dangerous_configuration"] }
webpki = "0.21"
nitro-ra = { path = "./nitro-ra" }